<resources>
    <string name="app_name">learning_app</string>
    <!--Main menu-->
    <string name="mainmenu_tittle">Main Menu</string>
    <string name="mainmenu_login_button">LOG IN</string>
    <string name="mainmenu_register_button">REGISTER</string>

    <!--Register-->
    <string name="register_title">Register</string>
    <string name="register_username">Username</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register_confirm_button">CONFIRM</string>
    <string name="register_profile_picture">Profile Image</string>

    <!--Log in-->
    <string name="login_tittle">Log In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_button">CONFIRM</string>
    <string name="login_profile_picture">Profile Image</string>

    <!--Select menu-->
    <string name="selectmenu_tittle">Select menu</string>

    <!--List menu-->
    <string name="list_contact_tittle">Contacts</string>
    <string name="list_contact_button_description">Add New Contact</string>
    <string name="list_contact_image_description">Contact Image</string>

    <!--Contact detail -->
    <string name="contact_detail_toolbar_tittle">Contact Details</string>
    <string name="contact_detail_image_description">Contact Image</string>
    <string name="contact_detail_name_tag">Name:</string>
    <string name="contact_detail_phone_tag">Phone:</string>
    <string name="contact_detail_email_tag">E-mail:</string>
    <string name="list_contact_logout">Logout</string>

    <!-- Contact Creation -->
    <string name="contact_creation_toolbar_tittle">Add a Contact</string>
    <string name="contact_creation_name_tag">Name:</string>
    <string name="contact_creation_phone_tag">Phone:</string>
    <string name="contact_creation_email_tag">E-mail:</string>
    <string name="contact_creation_name_placeholder">Name</string>
    <string name="contact_creation_phone_placeholder">Phone</string>
    <string name="contact_creation_email_placeholder">E-mail</string>
    <string name="contact_creation_image_description">Profile Image</string>
    <string name="contact_creation_name_description">Profile Name</string>
    <string name="contact_creation_email_description">Profile Email</string>
    <string name="contact_creation_phone_description">Profile Phone</string>
    <string name="contact_creation_button">Save</string>


</resources>