<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/register_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/register_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/register_profileimage"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/register_profile_picture"
            app:layout_constraintBottom_toTopOf="@+id/register_username_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/register_username_textbiew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_username"
            app:layout_constraintBottom_toBottomOf="@+id/register_username_edittext"
            app:layout_constraintEnd_toStartOf="@+id/register_username_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_email_textview" />

        <EditText
            android:id="@+id/register_username_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/register_username"
            android:ems="10"
            android:hint="@string/register_username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/register_email_edittext"
            app:layout_constraintEnd_toEndOf="@+id/register_email_edittext"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/register_email_edittext"
            app:layout_constraintTop_toBottomOf="@id/register_profileimage"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/register_email_textview"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="@string/register_email"
            app:layout_constraintBottom_toBottomOf="@+id/register_email_edittext"
            app:layout_constraintEnd_toEndOf="@+id/register_password_textview"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_password_textview" />

        <EditText
            android:id="@+id/register_email_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints="@string/register_email"
            android:ems="10"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@id/register_username_edittext"
            app:layout_constraintBottom_toTopOf="@+id/register_password_edittext"
            app:layout_constraintEnd_toEndOf="@+id/register_password_edittext"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/register_password_edittext" />

        <TextView
            android:id="@+id/register_password_textview"
            android:layout_width="71dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_password"
            app:layout_constraintBottom_toBottomOf="@+id/register_password_edittext"
            app:layout_constraintEnd_toEndOf="@+id/register_passwordrepeat_textview"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/register_password_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/register_password"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/register_passwordrepeat_edittext"
            app:layout_constraintEnd_toEndOf="@+id/register_passwordrepeat_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_passwordrepeat_edittext" />

        <TextView
            android:id="@+id/register_passwordrepeat_textview"
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_repeat_password"
            app:layout_constraintBottom_toBottomOf="@+id/register_passwordrepeat_edittext"
            app:layout_constraintEnd_toStartOf="@+id/register_passwordrepeat_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_textview"
            app:layout_constraintVertical_bias="0.857" />

        <EditText
            android:id="@+id/register_passwordrepeat_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:autofillHints="@string/register_repeat_password"
            android:ems="10"
            android:hint="@string/register_repeat_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/register_confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.912"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:text="@string/register_confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

